labs/03-k8s-local/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
  namespace: devops-lab
  labels:
    app: devops-app
spec:
  type: ClusterIP
  selector:
    app: devops-app
  ports:
    - name: http # Nome necessário para o ServiceMonitor mapear
      protocol: TCP
      port: 80
      targetPort: 8000
